--- a/src/index.css
+++ b/src/index.css
@@ -6,23 +6,28 @@ body {
   box-sizing: border-box;
   height: 100vh;
   width: 100vw;
-  padding: 40px;
+  padding: 10px;
   background: #e2e2e2;
 }
 
-.container .slick-slider .slick-list canvas {
-  width: 600px;
-  height: 600px;
+.container .slick-slider {
+  width: 100%;
+  height: 100%;
 }
+
+.item {
+  height: 97vh;
+}
+
 .slick-prev {
-  left: 50px;
+  left: 0;
   width: 40px;
   height: 40px;
   z-index: 1;
 }
 
 .slick-next {
-  right: 50px;
+  right: 0;
   width: 40px;
   height: 40px;
   z-index: 1;
